js/dom/global-constructors-attributes.html is flaky: ResourceTiming runtime feature leaks between tests https://bugs.webkit.org/show_bug.cgi?id=158902

Reviewed by Benjamin Poulain.

Adds a new reset() mechanism to RuntimeEnabledFeatures so that they could be brought back to the initial state.
This reset() is then called from DumpRenderTree and WebKitTestRunner.

No new tests but hopefully current tests will be less flaky.

* bindings/generic/RuntimeEnabledFeatures.cpp:
(WebCore::RuntimeEnabledFeatures::RuntimeEnabledFeatures):
(WebCore::RuntimeEnabledFeatures::reset):
* bindings/generic/RuntimeEnabledFeatures.h:
* testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState): reset RuntimeEnabledFeatures.


Canonical link: https://commits.webkit.org/177816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203110 268f45cc-cd09-0410-ab3c-d52691b4dbfc